# govSim

./: .gitignore  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/simulator-agents/: Cargo.toml
crates/simulator-agents/src/: lib.rs
crates/simulator-calibration/: Cargo.toml
crates/simulator-calibration/src/: lib.rs  vdem.rs
crates/simulator-cli/: Cargo.toml
crates/simulator-cli/src/: main.rs
crates/simulator-cli/tests/: long_horizon.rs
crates/simulator-core/: Cargo.toml
crates/simulator-core/src/: components.rs  judiciary.rs  lib.rs  phase.rs  polity.rs  resources.rs  rights_catalog.rs  rng.rs  state_capacity.rs  tick.rs  world.rs
crates/simulator-counterfactual/: Cargo.toml
crates/simulator-counterfactual/src/: estimate.rs  lib.rs  monte_carlo.rs  pair.rs  triple.rs
crates/simulator-econ/: Cargo.toml
crates/simulator-econ/src/: lib.rs
crates/simulator-ipc/: Cargo.toml
crates/simulator-ipc/src/: arrow_schema.rs  flight_client.rs  lib.rs
crates/simulator-law/: CONTEXT_VARS.md  Cargo.toml
crates/simulator-law/src/: crisis_link.rs  dsl.rs  eval.rs  ig2.rs  legitimacy.rs  lib.rs  lower.rs  registry.rs  system.rs
crates/simulator-law/src/dsl/: ast.rs  parser.rs  typecheck.rs
crates/simulator-llm/: Cargo.toml
crates/simulator-llm/src/: client.rs  lib.rs
crates/simulator-metrics/: Cargo.toml
crates/simulator-metrics/src/: lib.rs  row.rs  store.rs  system.rs  window.rs
crates/simulator-net/: Cargo.toml
crates/simulator-net/src/: csr.rs  graph.rs  lib.rs
crates/simulator-rl/: Cargo.toml
crates/simulator-rl/src/: lib.rs
crates/simulator-scenario/: Cargo.toml
crates/simulator-scenario/src/: lib.rs
crates/simulator-snapshot/: Cargo.toml
crates/simulator-snapshot/src/: columnar.rs  hash.rs  lib.rs
crates/simulator-systems/: Cargo.toml
crates/simulator-systems/src/: approval.rs  birth_death.rs  crisis.rs  education.rs  election.rs  employment.rs  fiscal_capacity.rs  health.rs  income_update.rs  inflation.rs  judicial.rs  lib.rs  macro_indicators.rs  migration.rs  opinion.rs  pollution.rs  state_fragility.rs  wealth_update.rs
crates/simulator-telemetry/: Cargo.toml
crates/simulator-telemetry/src/: lib.rs  system.rs
crates/simulator-types/: Cargo.toml
crates/simulator-types/src/: lib.rs
data/grammars/: ig2.gbnf  ig2_schema.json  ig2_types.py
data/prompts/: ig2_extraction.md
docs/: blueprint.md  methodology.md  roadmap.md
scenarios/: athens_507bce.yaml  australia_2022.yaml  failed_state.yaml  hello.yaml  housing_benefit_2026.ig2.json  income_tax_2026.ig2.json  income_tax_2026.ugscat  modern_democracy.yaml  new_deal_1933.yaml  pre_rights_era.yaml  smoke_100.yaml  smoke_100k.yaml  stimulus_2026.ig2.json  weimar_1919.yaml
sidecars/: pyproject.toml
sidecars/agenttorch_sidecar/: __main__.py
sidecars/cleanrl_sidecar/: __main__.py
sidecars/psychsim_sidecar/: __main__.py
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
tauri-app/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-app/ui/src/: App.svelte  app.css  main.ts
tauri-app/ui/src/components/: Histogram.svelte  Layout.svelte  LineChart.svelte  ScatterChart.svelte  StatCard.svelte
tauri-app/ui/src/components/primitives/: Box.svelte  Center.svelte  Cluster.svelte  Divider.svelte  Grid.svelte  Stack.svelte
tauri-app/ui/src/components/ui/: Alert.svelte  Button.svelte  CommandPalette.svelte  Drawer.svelte  EmptyState.svelte  KBD.svelte  Modal.svelte  PlayControls.svelte  Skeleton.svelte  Spinner.svelte  Tabs.svelte  ThemeToggle.svelte  ToastViewport.svelte  Tooltip.svelte
tauri-app/ui/src/lib/: autostep.svelte.ts  autostep.test.ts  chart-utils.test.ts  chart-utils.ts  commands.svelte.ts  commands.test.ts  election-utils.test.ts  election-utils.ts  format.test.ts  ipc.test.ts  ipc.ts  region-utils.test.ts  region-utils.ts  register-commands.test.ts  register-commands.ts  routes.test.ts  routes.ts  store.svelte.ts  store.test.ts  theme.test.ts  theme.ts  toasts.svelte.ts  toasts.test.ts
tauri-app/ui/src/lib/tokens/: colors.css  elevation.css  motion.css  radii.css  spacing.css  typography.css  z-index.css
tauri-app/ui/src/views/: CitizenView.svelte  Dashboard.svelte  ElectionView.svelte  LawEffect.svelte  LawProposal.svelte  LawsView.svelte  RegionsView.svelte  SettingsView.svelte  StartView.svelte
xtask/: Cargo.toml
xtask/src/: main.rs
