[package]
name        = "simulator-agents"
version     = "0.1.0"
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
description = "PIANO cognitive architecture + Plan-then-Execute executor + tier router."

[dependencies]
simulator-core  = { workspace = true }
simulator-llm   = { workspace = true }
simulator-ipc   = { workspace = true }
simulator-types = { workspace = true }
dashmap         = { workspace = true }
smallvec        = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
bevy_ecs        = { workspace = true }
tracing         = { workspace = true }
