[package]
name        = "simulator-calibration"
version     = "0.1.0"
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
description = "V-Dem ingestion (Polars), IRT mapping, scenario calibration."

[dependencies]
simulator-core  = { workspace = true }
simulator-types = { workspace = true }
polars          = { workspace = true }
serde           = { workspace = true }
tracing         = { workspace = true }
thiserror       = { workspace = true }
