[package]
name        = "simulator-core"
version     = "0.1.0"
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
description = "ECS World, Schedule, deterministic RNG, tick clock."

[dependencies]
simulator-types = { workspace = true }

bevy_ecs    = { workspace = true }
bevy_tasks  = { workspace = true }
rand        = { workspace = true }
rand_chacha = { workspace = true }
parking_lot = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
ahash       = { workspace = true }
thiserror   = { workspace = true }
bitflags    = { workspace = true }
