[package]
name        = "simulator-ipc"
version     = "0.1.0"
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
description = "Cross-process bridges: Arrow Flight + Cap'n Proto + shared memory."

[dependencies]
simulator-core  = { workspace = true }
simulator-types = { workspace = true }
arrow           = { workspace = true }
arrow-flight    = { workspace = true }
tonic           = { workspace = true }
prost           = { workspace = true }
capnp           = { workspace = true }
capnp-rpc       = { workspace = true }
shared_memory   = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
