[package]
name        = "simulator-law"
version     = "0.1.0"
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
description = "Computational law: NL → IG 2.0 → UGS-Catala DSL → Cranelift JIT → ECS LawSystem."

[dependencies]
simulator-core   = { workspace = true }
simulator-types  = { workspace = true }
simulator-llm    = { workspace = true }
chumsky          = { workspace = true }
cranelift        = { workspace = true }
cranelift-jit    = { workspace = true }
cranelift-module = { workspace = true }
wasmtime         = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
