[package]
name        = "simulator-law"
version     = "0.1.0"
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
description = "Computational law: NL → IG 2.0 → UGS-Catala DSL → Cranelift JIT → ECS LawSystem."

[dependencies]
simulator-core   = { workspace = true }
simulator-types  = { workspace = true }
bevy_ecs         = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
fixed            = { workspace = true }
parking_lot      = { workspace = true }

[features]
# JIT and WASM backends are deferred behind features until the Phase-4
# stretch milestone. The default backend is a tree-walking interpreter.
default = []
jit  = ["dep:cranelift", "dep:cranelift-jit", "dep:cranelift-module"]
wasm = ["dep:wasmtime"]
llm  = ["dep:simulator-llm"]

[dependencies.cranelift]
workspace = true
optional  = true

[dependencies.cranelift-jit]
workspace = true
optional  = true

[dependencies.cranelift-module]
workspace = true
optional  = true

[dependencies.wasmtime]
workspace = true
optional  = true

[dependencies.simulator-llm]
workspace = true
optional  = true
