[package]
name        = "simulator-net"
version     = "0.1.0"
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
description = "Influence/transaction/message graph with petgraph + CSR projection."

[dependencies]
simulator-core  = { workspace = true }
simulator-types = { workspace = true }
bevy_ecs        = { workspace = true }
petgraph        = { workspace = true }
sprs            = { workspace = true }
rand            = { workspace = true }
rand_chacha     = { workspace = true }
