[package]
name        = "simulator-scenario"
version     = "0.1.0"
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
description = "YAML scenario format + runner."

[dependencies]
simulator-core        = { workspace = true }
simulator-calibration = { workspace = true }
simulator-types       = { workspace = true }
serde                 = { workspace = true }
serde_yaml            = { workspace = true }
thiserror             = { workspace = true }
rand                  = { workspace = true }
rand_chacha           = { workspace = true }
fixed                 = { workspace = true }

[dev-dependencies]
simulator-systems     = { workspace = true }
simulator-snapshot    = { workspace = true }
