[package]
name        = "simulator-snapshot"
version     = "0.1.0"
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
description = "Deterministic replay: bincode columnar dumps + per-tick action log."

[dependencies]
simulator-core  = { workspace = true }
simulator-types = { workspace = true }
bevy_ecs        = { workspace = true }
bincode         = { workspace = true }
blake3          = { workspace = true }
zstd            = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
