[package]
name        = "simulator-telemetry"
version     = "0.1.0"
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
description = "Tracing spans, perf counters, GPU telemetry."

[dependencies]
simulator-core     = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
