[package]
name        = "ugs-tauri"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "UGS desktop shell."
publish     = false

[lib]
name = "ugs_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri              = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1.41", features = ["full"] }

# UGS core (paths up two levels into the workspace).
simulator-core     = { path = "../../crates/simulator-core" }
simulator-scenario = { path = "../../crates/simulator-scenario" }
simulator-snapshot = { path = "../../crates/simulator-snapshot" }
